Fri Sep 22 13:41:02 2006  Tim Janik  <timj@imendio.com>

	* gtype.h: applied patch from Behdad with slight optimization, 
	fixes #356175.

	* gobjectnotifyqueue.c: fixed include-guard macro name.

Mon Sep 11 12:12:45 2006  Tim Janik  <timj@imendio.com>

	* gparam.c (g_param_spec_sink): reimplemented floating flag handling by
	atomically accessing a reserved GData bit, fixes #330556.

Tue Aug 29 13:27:33 2006  Tim Janik  <timj@gtk.org>

	* glib-mkenums.in: fixed to print usage and version info on STDOUT
	(#322502).

	* gobject.c (g_initially_unowned_init): restore ; after G_DEFINE_TYPE.

2006-08-26  Matthias Clasen  <mclasen@redhat.com>

	* gobject.c: Remove ; after G_DEFINE_TYPE.  (#351741, Kjartan Maraas)

Wed Aug 23 10:35:32 2006  Tim Janik  <timj@gtk.org>

	* gobject.[hc]: changed return value of g_value_dup_object(), fixes #343292.

2006-08-23  Sven Neumann  <sven@gimp.org>

	* gobject/glib-genmarshal.[c1]: added new command-line option
	"--internal" that can be used to let glib-genmarshal generate
	internal functions using the G_GNUC_INTERNAL attribute (bug #346647).

Wed Aug 16 13:55:08 2006  Tim Janik  <timj@imendio.com>

	* gobject.c: conditionally thaw the notify queue after construction,
	so we don't trigger warnings when trying to thaw an unfrozen singleton.

2006-08-15  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.2 ===

2006-08-05  Matthias Clasen  <mclasen@redhat.com>

	* gparamspecs.c (g_param_spec_types_init): Don't initialize
	struct members with function calls.  (#349952)

2006-07-22  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.1 ===

2006-07-21  Matthias Clasen  <mclasen@redhat.com>

	* gtypemodule.c (g_type_module_register_type): Copy the complete
	value table, not just the first 4 bytes.  (#348136, Coverity)

2006-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.0 ===

2006-06-20  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.11.4 ===
