@@ -154,6 +154,12 @@ EXTRA_DIST = \
 gen_sources = xgen-gmh xgen-gmc xgen-gms
 CLEANFILES = $(gen_sources)
 
+if OS_LINUX
+if HAVE_GNUC_VISIBILITY
+TESTS = pltcheck.sh
+endif
+endif
+
 # normal autogeneration rules
 # all autogenerated files need to be generated in the srcdir,
 # so old versions get remade and are not confused with newer
